objects/Tech_File__c.object
<CustomObject>
    <fields>
        <fullName>Compatible_PT__c</fullName>
        <label>Compatible PT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Manual__c</fullName>
        <label>Design Manual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doc_Rev__c</fullName>
        <label>Doc Rev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Title__c</fullName>
        <label>Document Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDA_Tool_Supported__c</fullName>
        <label>EDA Tool Supported</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Vendor__c</fullName>
        <label>IP Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <externalId>true</externalId>
        <label>Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifecycle__c</fullName>
        <label>Lifecycle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Number__c</fullName>
        <label>PT Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specification_Type__c</fullName>
        <label>Specification Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spice_Model_Type__c</fullName>
        <label>Spice Model Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Geometry__c</fullName>
        <label>Technology Geometry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Type__c</fullName>
        <label>Technology Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tech File</label>
    <nameField>
        <label>Tech File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tech Files</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>